[package]
name = "mqtt5-protocol"
version = "0.9.9"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MQTT v5.0 protocol implementation - packets, encoding, and validation"
documentation = "https://docs.rs/mqtt5-protocol"
readme = "README.md"
keywords = ["mqtt", "protocol", "iot", "codec", "packet"]
categories = ["network-programming", "encoding", "parsing"]

[features]
default = ["std"]
std = [
    "thiserror",
    "tracing",
    "bytes/std",
    "serde/std",
    "tracing?/std",
    "bebytes/std",
    "bebytes/bytes",
]

[dependencies]
bebytes = { version = "3.0.2", default-features = false }
bytes = { version = "1.10", default-features = false, features = [
    "extra-platforms",
] }
thiserror = { version = "2.0", optional = true }
serde = { version = "1.0", features = [
    "derive",
    "alloc",
], default-features = false }
tracing = { version = "0.1.41", default-features = false, optional = true }
hashbrown = "0.16"
portable-atomic = { version = "1.12", default-features = false }
portable-atomic-util = { version = "0.2.4", default-features = false, features = [
    "alloc",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.0"

[dev-dependencies]
proptest = "1.9.0"
